# voice-to-text

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/whispr-core/: Cargo.toml
crates/whispr-core/src/: hotkey.rs  inject.rs  lib.rs  license.rs  settings.rs  vad.rs
docker/: README.md  dev.Dockerfile
docs/: contracts.md  deviations.md  permissions.md  testing.md
e2e/: settings.spec.ts
licensing/: README.md
licensing/worker/: worker.js  wrangler.toml
scripts/: gen-icon.mjs
sidecar/whisper/: README.md  build-linux.sh  build-macos.sh  build-windows.ps1
src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cloud.rs  commands.rs  hotkeys.rs  i18n.rs  lib.rs  license.rs  main.rs  models.rs  pill.rs  postproc.rs  recorder.rs  session.rs  state.rs  tray.rs  updates.rs  whisper.rs
src-tauri/src/inject/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: pipeline.rs
src/components/: Home.tsx  HotkeyCapture.tsx  Onboarding.test.tsx  Onboarding.tsx  Pill.test.tsx  Pill.tsx  Settings.test.tsx  Settings.tsx  StateChip.tsx  TestRecorder.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  tabs.tsx
src/hooks/: useAppState.ts  useHistory.ts  useSettings.ts
src/lib/: hotkey.test.ts  hotkey.ts  tauri.test.ts  tauri.ts  types.ts  utils.ts
src/lib/i18n/: common.ts  home.ts  index.test.ts  index.ts  onboarding.ts  settings.ts
src/styles/: globals.css
