[workspace]
resolver = "2"
members = ["crates/whispr-core", "src-tauri"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Konstantin Kochevrin"]
repository = "https://github.com/kochevrin/voice-to-text"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
